Java 17 and 18 support (#173)